--- a/todo/estilosM.css
+++ b/todo/estilosM.css
@@ -65,7 +65,10 @@ body{
     box-shadow:0px 0px 50px white
 }
 
-
+.audio-player audio{
+    width: 100%;
+    height: 50px;
+}
 
 .musicas{
     flex: 0 0 100%;
