--- a/todo/estilosM.css
+++ b/todo/estilosM.css
@@ -44,19 +44,23 @@
     src: url("fuentes/HappyTime.otf");
 }
 body{
-    background-image: url("musica/net.jpg");
+    background-image: url("musica/52f9d5efb4bacc6bb974b433b4b408e5.jpg");
     background-size: 100%;
+}
+a img{
+    width:100px;
 }
 #cajeta{
     margin-top: 200px;
     margin-left: 60px;
 }
 #box{
+    text-align: justify;
     display: flex;
     overflow-x: scroll ;
     padding: 24px;
     width: 800px;
-    height: 1000px;
+    height: 1200px;
     scroll-snap-type: x mandatory;
     scroll-padding: 14px ;
     border-radius: 10px;
@@ -65,7 +69,8 @@ body{
     box-shadow:0px 0px 50px white
 }
 
-.audio-player audio{
+
+audio{
     width: 100%;
     height: 50px;
 }
@@ -83,42 +88,9 @@ body{
     font-size: 80px;
 }
 .musicas p{
-    background-color: rgba(61, 228, 228, 0.498);
+    background-color: rgba(69, 191, 247, 0.498);
     border-radius: 10px;
     font-size: 40px;
     font-family: happy;
 }
 
-#v1{
-    background-color: aquamarine;
-    position: relative;
-    width: 500px;
-    height: 500px;
-    
-}
-#v2{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    
-}
-#v2 h2 {
-    position:absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-#v2 p {
-    position:absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-#v2 audio{
-    width: 100%;
-    outline: none;
-}
